# defense-experiments

./: .gitignore  .pre-commit-config.yaml  LICENSE  ex.sh  pyproject.toml
defense_experiments/: composite_plots.py  config.py  intro_composites.py  kernel_composites.py
ksindy_figs/: data.py  plotting.py
